--- a/resources/css/nav.css
+++ b/resources/css/nav.css
@@ -37,3 +37,30 @@ a{
     margin: auto 20px;
     cursor: pointer;
 }
+#categorias-dropdown-toggle {
+    cursor: pointer;
+}
+#categorias-dropdown {
+    display: none;
+    position: absolute;
+    background-color: orange;
+    border-radius: 2vh;
+    z-index: 1;
+}
+#categorias-dropdown a {
+    display: flex;
+    flex-direction: column;
+    text-decoration: none;
+    color: black;
+    transition: background-color 0.3s;
+    border-radius: 1vh;
+    text-align: start;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    margin-left: 8px;
+    margin-right: 8px;
+    text-align: center;
+}
+#categorias-dropdown a:hover {
+    background-color: rgb(255, 183, 48);
+}
